# isometric

./: Cargo.toml  editor.ron  todo.md
assets/levels/: test.scn.ron
src/: camera.rs  main.rs  world.rs
src/editor/: mesh.rs  mod.rs
