[package]
name = "isometric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy_debug_grid = "0.4.0"
bevy_mod_picking = { version = "0.17.0", default-features = false, features = ["backend_raycast", "selection"] }
bevy_panorbit_camera = { version = "0.9.2", features = ["bevy_egui"] }
bevy_tweening = "0.9.0"
space_editor = { git = "https://github.com/MickHarrigan/space_editor.git" }
